# qore

./: .gitignore  Cargo.toml  README.md  example-client.js  example.js  index.d.ts  index.js  package-lock.json  package.json  test-server.js  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: CI.yml  build-artifacts.yml  publish-with-artifacts.yml  publish.yml
docs/: api.md  architecture.md  example-echo.md  getting-started.md
examples/proxy/: proxy-server.js
examples/react/: README.md  app.js  index.html  server.js
qore-client/: Cargo.toml
qore-client/src/: main.rs
scripts/: fix-types.js
src/: client.ts  index.ts  lib.rs  server.ts
