
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "qore"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0", features = ["async", "tokio_rt"] }
napi-derive = "3.0.0"
quiche = "0.22.0"
tokio = { version = "1.40.0", features = ["full"] }
ring = "0.17.8"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
